[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = [
    "n1_asar",
    "n1_asar.*",
]
[project]
name = "xarray-safe-asar"
version = "2024.07.04"
description = "Python lib to read ASAR SLC product from ENVISAT mission (2002-2012)."
readme = "README.rst"
authors = [
  {name = "Antoine GROUAZEL", email = "antoine.grouazel@ifremer.fr"}
]
maintainers = [
  {name = "Antoine GROUAZEL", email = "antoine.grouazel@ifremer.fr"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    'xarray'

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/umr-lops/xarray-safe-asar/issues"
changelog = "https://github.com/umr-lops/xarray-safe-asar/blob/master/changelog.md"
homepage = "https://github.com/umr-lops/xarray-safe-asar"

[tool.setuptools]
package-dir = {"" = "n1_asar"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
known_first_party = "n1_asar"

