[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "xarray-safe-asar"
description = "Python lib to read ASAR SLC product from ENVISAT mission (2002-2012)."
readme = "README.md"
authors = [
  {name = "Antoine GROUAZEL", email = "antoine.grouazel@ifremer.fr"}
]
maintainers = [
  {name = "Antoine GROUAZEL", email = "antoine.grouazel@ifremer.fr"}
]
keywords = [
  "xarray",
  "earth-observation",
  "remote-sensing",
  "satellite-imagery",
  "asar",
  "envisat",
  "sar",
  "synthetic-aperture-radar",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
license = {text = "MIT license"}
dependencies = [
    'xarray'

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/umr-lops/xarray-safe-asar/issues"
changelog = "https://github.com/umr-lops/xarray-safe-asar/blob/master/changelog.md"
homepage = "https://github.com/umr-lops/xarray-safe-asar"

[tool.setuptools]
packages = ["n1_asar"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.black]
line-length = 100

[tool.coverage.run]
source = ["ceos_alos2"]
branch = true


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
known_first_party = "n1_asar"

